--- a/courses/pcmi/2010/teran/notes/notes.tex
+++ b/courses/pcmi/2010/teran/notes/notes.tex
@@ -32,6 +32,7 @@
 \newcommand\bfv{\mathbf{v}}
 \newcommand\bfw{\mathbf{w}}
 \newcommand\bfx{\mathbf{x}}
+\newcommand\bfA{\mathbf{A}}
 \newcommand\bfB{\mathbf{B}}
 \newcommand\bfC{\mathbf{C}}
 \newcommand\bfD{\mathbf{D}}
