--- a/courses/pcmi/2010/teran/notes/notes.tex
+++ b/courses/pcmi/2010/teran/notes/notes.tex
@@ -48,6 +48,8 @@
 \newcommand\bsepsilon{\boldsymbol{\epsilon}}
 \newcommand\bsphi{\boldsymbol{\phi}}
 \newcommand\bssigma{\boldsymbol{\sigma}}
+\newcommand\II{I\!\!I}
+\newcommand\III{I\!\!I\!\!I}
 
 %\newcommand\pcms{\texttt{pcms-l.cls}}
 %\newcommand\amsbook{\texttt{amsbook.cls}}
