--- a/courses/pcmi/2010/teran/notes/notes.bib
+++ b/courses/pcmi/2010/teran/notes/notes.bib
@@ -39,7 +39,7 @@
  issue_date = {May 2005},
  volume = {11},
  number = {3},
- month = may,
+ month = {may},
  year = {2005},
  issn = {1077-2626},
  pages = {317--328},
@@ -50,7 +50,7 @@
  publisher = {IEEE Educational Activities Department},
  address = {Piscataway, NJ, USA},
  keywords = {Index Terms- Finite volume methods, constructive solid geometry, physically-based modeling.},
-} 
+}
 
 @article{Irving06,
  author = {Irving, G. and Teran, J. and Fedkiw, R.},
@@ -74,7 +74,7 @@
 @article{Bonet_Wood_2008, title={Nonlinear Continuum Mechanics for Finite Element Analysis}, volume={24}, url={http://ebooks.cambridge.org/ref/id/CBO9780511755446}, number={11}, journal={Communications in Numerical Methods in Engineering}, publisher={Cambridge University Press}, author={Bonet, Javier and Wood, Richard D}, year={2008}, pages={1567--1568}}
 
 @Article{Sifakis09,
-AUTHOR = {Sifakis, Eftychios and Hellrung, Jeffrey and Teran, Joseph and Oliker, Aaron and Cutting, Court}
+AUTHOR = {Sifakis, Eftychios and Hellrung, Jeffrey and Teran, Joseph and Oliker, Aaron and Cutting, Court},
 TITLE = {Local flaps: a real-time finite element based solution to the plastic surgery defect puzzle.},
 JOURNAL = {Stud Health Technol Inform},
 VOLUME = {142},
