--- a/courses/pcmi/2010/teran/notes/notes.tex
+++ b/courses/pcmi/2010/teran/notes/notes.tex
@@ -28,6 +28,7 @@
 \newcommand\bff{\mathbf{f}}
 \newcommand\bfg{\mathbf{g}}
 \newcommand\bfh{\mathbf{h}}
+\newcommand\bfn{\mathbf{n}}
 \newcommand\bfu{\mathbf{u}}
 \newcommand\bfv{\mathbf{v}}
 \newcommand\bfw{\mathbf{w}}
